2007-08-12  Wim Taymans  <wim.taymans@gmail.com>

	* gst/gstcaps.c: (gst_caps_set_simple_valist),
	(gst_caps_intersect):
	Fix proper check for simple caps.

2007-08-10  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/Makefile.am:
	* docs/libs/Makefile.am:
	  Remove cruft and do some cleanups.

	* docs/gst/gstreamer-docs.sgml:
	* docs/libs/gstreamer-libs-docs.sgml:
	  Prepare for comming gtkdoc features (rebase against online docs).

2007-08-10  Michael Smith <msmith@fluendo.com>

	* docs/gst/gstreamer-sections.txt:
	  Add gst_registry_add_path to docs.

2007-08-10  Michael Smith <msmith@fluendo.com>

	* gst/gstregistry.h:
	  Add gst_registry_add_path, which was missing from this header.

2007-08-10  Tim-Philipp Müller  <tim at centricular dot net>

	* libs/gst/controller/gstlfocontrolsource.c:
	  Printf format fix.

2007-08-09  Philippe Kalaf <philippe.kalaf@collabora.co.uk>

	* libs/gst/base/gstbasesink.c:
	  Don't send an async_start message during downwards state change if 
	  target state is less than READY

2007-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	translated by: Gabor Kelemen <kelemeng@gnome.hu>

	* po/LINGUAS:
	* po/hu.po:
	  Added Hungarian translation.

2007-08-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/fi.po:
	* po/it.po:
	* po/nl.po:
	* po/sv.po:
	* po/uk.po:
	  Updated translations.

2007-08-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* libs/gst/controller/Makefile.am:
	Dist gstlfocontrolsourceprivate.h

2007-08-07  Jan Schmidt  <thaytan@mad.scientist.com>

	* docs/libs/gstreamer-libs.types:
	Don't register the enum type gst_lfo_waveform_get_type() in the
	.types file - only GObject derived types belong.

2007-08-07  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: <arenevier at fdn dot fr>

	* gst/gstbuffer.h:
	Remove comma from last element in enum to avoid compile errors when
	using -pendantic. Fixes #464366.

2007-08-07  Wim Taymans  <wim.taymans@gmail.com>

	* docs/design/part-TODO.txt: