@@ -1,5 +1,13 @@
 2007-08-12  Wim Taymans  <wim.taymans@gmail.com>
 
+	* docs/gst/gstreamer-sections.txt:
+	* gst/gststructure.c: (gst_structure_get_uint):
+	* gst/gststructure.h:
+	Add function to get uint from a structure.
+	API: gst_structure_get_uint()
+
+2007-08-12  Wim Taymans  <wim.taymans@gmail.com>
+
 	* gst/gstcaps.c: (gst_caps_set_simple_valist),
 	(gst_caps_intersect):
 	Fix proper check for simple caps.
